fix menu toggle on mobile

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -455,12 +455,12 @@ fa.breadcrumb {
 }
 
 .navbar-default .navbar-toggle {
-    background-color: transparent;
+/*    background-color: transparent;*/
     border-color: transparent;
 }
 
 .navbar-default .navbar-toggle .icon-bar {
-    background-color: #ffffff;
+/*    background-color: #ffffff;*/
 }
 
 .navbar-default .navbar-toggle:hover,
